<?xml version="1.0"?>
<package format="2">
  <name>agv_as18</name>
  <version>2</version>
  <description>The agv_as18 package</description>

  <maintainer email="rkajat15@student.aau.dk">Roland Kajatin</maintainer>
  <author email="rkajat15@student.aau.dk">Roland Kajatin</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  
  <export></export>
</package>
